# pygltfio

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/gltfio/: __init__.py  glb.py  parser.py  types.py
tests/: test_buffer.py  test_gltf.py
